--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
   - "npm install mocha"
   - "npm install -g codecov"
 script:
-  - "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
+  - "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive"
   - "codecov"
